force-app/main/default/objects/Proesis_Settings__c/Proesis_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Proesis Settings</label>
</CustomObject>