force-app/main/default/objects/Proesis_Settings__c/fields/Exception_Payment_Window__c.field-meta.xml
<CustomField>
    <fullName>Exception_Payment_Window__c</fullName>
    <description>The number of days after a visit datetime where an exception payment can be issued</description>
    <inlineHelpText>The number of days after a visit datetime where an exception payment can be issued</inlineHelpText>
    <label>Exception Payment Window</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>