force-app/main/default/objects/Proesis_Settings__c/fields/Loyalty_Threshold_Window__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Threshold_Window__c</fullName>
    <description>The number of days window where a loyalty level threshold can be broken through again to earn a payment in currency or points.</description>
    <inlineHelpText>The number of days window where a loyalty level threshold can be broken through again to earn a payment in currency or points.</inlineHelpText>
    <label>Loyalty Threshold Window</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>