force-app/main/default/objects/Proesis_Settings__c/fields/OnbePaymentService_AcctMgmtEndpoint__c.field-meta.xml
<CustomField>
    <fullName>OnbePaymentService_AcctMgmtEndpoint__c</fullName>
    <description>The Account Management endpoint specific to OnbePaymentService</description>
    <inlineHelpText>The Account Management endpoint specific to OnbePaymentService</inlineHelpText>
    <label>OnbePaymentService AcctMgmtEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>