force-app/main/default/objects/Proesis_Settings__c/fields/OnbePaymentService_AcctMgmtProgramID__c.field-meta.xml
<CustomField>
    <fullName>OnbePaymentService_AcctMgmtProgramID__c</fullName>
    <label>OnbePaymentService AcctMgmtProgramID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>