force-app/main/default/objects/Proesis_Settings__c/fields/OnbePaymentService_AcctMgmtRequestNS__c.field-meta.xml
<CustomField>
    <fullName>OnbePaymentService_AcctMgmtRequestNS__c</fullName>
    <label>OnbePaymentService AcctMgmt RequestNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>