force-app/main/default/objects/Proesis_Settings__c/fields/OnbePaymentService_AcctMgmtResponseNS__c.field-meta.xml
<CustomField>
    <fullName>OnbePaymentService_AcctMgmtResponseNS__c</fullName>
    <label>OnbePaymentService AcctMgmt ResponseNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>