force-app/main/default/objects/Proesis_Settings__c/fields/OnbePaymentService_AcctMgmtTargetNS__c.field-meta.xml
<CustomField>
    <fullName>OnbePaymentService_AcctMgmtTargetNS__c</fullName>
    <label>OnbePaymentService AcctMgmtTargetNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>