force-app/main/default/objects/Proesis_Settings__c/fields/OnbePaymentService_CustSvcAppID__c.field-meta.xml
<CustomField>
    <fullName>OnbePaymentService_CustSvcAppID__c</fullName>
    <label>OnbePaymentService CustSvcAppID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>