force-app/main/default/objects/Proesis_Settings__c/fields/OnbePaymentService_CustSvcEndpoint__c.field-meta.xml
<CustomField>
    <fullName>OnbePaymentService_CustSvcEndpoint__c</fullName>
    <description>The Customer Service endpoint for the OnbePaymentService</description>
    <inlineHelpText>The Customer Service endpoint for the OnbePaymentService</inlineHelpText>
    <label>OnbePaymentService CustSvcEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>