force-app/main/default/objects/Proesis_Settings__c/fields/OnbePaymentService_CustSvcRequestNS__c.field-meta.xml
<CustomField>
    <fullName>OnbePaymentService_CustSvcRequestNS__c</fullName>
    <label>OnbePaymentService CustSvc RequestNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>