force-app/main/default/objects/Proesis_Settings__c/fields/OnbePaymentService_CustSvcResponseNS__c.field-meta.xml
<CustomField>
    <fullName>OnbePaymentService_CustSvcResponseNS__c</fullName>
    <label>OnbePaymentService CustSvc ResponseNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>