force-app/main/default/objects/Proesis_Settings__c/fields/Payment_Method_Expiry_Warning_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Expiry_Warning_Days__c</fullName>
    <description>Number of days before an alert is sent for a Payment Method about to expire</description>
    <inlineHelpText>Number of days before an alert is sent for a Payment Method about to expire</inlineHelpText>
    <label>Payment Method Expiry Warning Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>