force-app/main/default/objects/Proesis_Settings__c/fields/Payment_Service_Balance_Max_Freq__c.field-meta.xml
<CustomField>
    <fullName>Payment_Service_Balance_Max_Freq__c</fullName>
    <description>Max frequency in hours of &apos;background&apos; fetching balance for any Payment Service e.g. if a page is loaded and the last time a balance was checked from now() is less than this value in hours, do not fetch a fresh balance</description>
    <inlineHelpText>Max frequency in hours of &apos;background&apos; fetching balance for any Payment Service e.g. if a page is loaded and the last time a balance was checked from now() is less than this value in hours, do not fetch a fresh balance</inlineHelpText>
    <label>Payment Service Balance Max Freq</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>