force-app/main/default/objects/Proesis_Settings__c/fields/Payment_Service_Base_Retry__c.field-meta.xml
<CustomField>
    <fullName>Payment_Service_Base_Retry__c</fullName>
    <description>Initial number of seconds for a failure retry</description>
    <inlineHelpText>Initial number of seconds for a failure retry</inlineHelpText>
    <label>Payment Service Base Retry</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>