force-app/main/default/objects/Proesis_Settings__c/fields/Payment_Service_Max_Retry__c.field-meta.xml
<CustomField>
    <fullName>Payment_Service_Max_Retry__c</fullName>
    <description>Maximum retry for all payment services</description>
    <inlineHelpText>Maximum retry for all payment services</inlineHelpText>
    <label>Payment Service Max Retry</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>