force-app/main/default/objects/Proesis_Settings__c/fields/Payment_Service_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Payment_Service_Multiplier__c</fullName>
    <description>Multiplier factor for retry strategy</description>
    <inlineHelpText>Multiplier factor for retry strategy</inlineHelpText>
    <label>Payment Service Multiplier</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>