force-app/main/default/objects/Proesis_Settings__c/fields/SMS_Verification_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SMS_Verification_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Verification Enabled</label>
    <type>Checkbox</type>
</CustomField>