force-app/main/default/objects/Proesis_Settings__c/fields/Verification_Timeout_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Verification_Timeout_Minutes__c</fullName>
    <description>The number of minutes after which a verification code times out.</description>
    <label>Verification Timeout Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>